# rex

./: Cargo.toml  rustfmt.toml
.github/workflows/: rust.yml
src/rex/: main.rs
src/rexc/: main.rs
src/rexc/parser/: lexer.rs  mod.rs
src/rexc/parser/ast/: program.rs
