[package]
name = "rex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }

[[bin]]
name = "rex"
path = "src/rex/main.rs"

[[bin]]
name = "rexc"
path = "src/rexc/main.rs"
